fix(a11y): add hidden form label to application creation
I have done this using a widely known technique to hide the label off screen
so it is not visible, but is read out by VoiceOver and other assistive
technologies.

--- a/css/form.css
+++ b/css/form.css
@@ -2,6 +2,11 @@
 @desc:   define font-family, -size, -color;
 
 --------------------------------*/
+b {
+  position: absolute;
+  left: -999em;
+}
+
 input {
   border: 0;
   border-bottom: 1px solid #ccc;
